--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -37,6 +37,7 @@ payment_expiration_col   = 2
 
 # Configuration for email
 [email]
+email_enabled   = True
 email_from      = My Website <info@mywebsite.com>
 email_reply_to  = info@mywebsite.com
 email_host      = myhost.com
