--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -8,6 +8,8 @@ bot_token    = 0000000000:AAAAAAAAAAAA-0000000000000000000000
 # App configuration
 [app]
 app_test_mode = False
+# Example with custom translation
+#app_lang_file = lang/lang_it.xml
 
 # Configuration for users
 [users]
