Add payment_check_on_join configuration field

--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -23,6 +23,7 @@ support_telegram = MySupportUsername
 # Configuration for payment
 [payment]
 payment_website          = https://mywebsite.com
+payment_check_on_join    = False
 payment_check_period_sec = -1
 payment_check_chat_ids   = -1000000000000,-1000000000001,-1000000000002
 payment_type             = GOOGLE_SHEET
