Add payment_date_format configuration field

--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -33,6 +33,7 @@ payment_google_pickle    = token.pickle
 payment_email_col        = 0
 payment_username_col     = 1
 payment_expiration_col   = 2
+payment_date_format      = %%d/%%m/%%Y
 
 # Example configuration for using an Excel file
 #payment_type       = EXCEL_FILE
