Add log_file_use_rotating configuration field
log_file_append is now considered only when log_file_use_rotating is false (it's useless with RotatingFileHandler)

--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -53,10 +53,13 @@ email_html_body = conf/email_body.html
 
 # Configuration for logging
 [logging]
-log_level           = INFO
-log_console_enabled = True
-log_file_enabled    = True
-log_file_name       = logs/payment_bot.log
-log_file_append     = False
-log_file_max_bytes  = 5242880
-log_file_backup_cnt = 10
+log_level             = INFO
+log_console_enabled   = True
+log_file_enabled      = True
+log_file_name         = logs/payment_bot.log
+log_file_use_rotating = True
+log_file_max_bytes    = 5242880
+log_file_backup_cnt   = 10
+
+# Only if log file rotating is not used
+#log_file_append     = False
