Columns are specified using the letter instead of the index

--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -28,9 +28,9 @@ payment_type             = GOOGLE_SHEET
 payment_google_sheet_id  = 0000000000000000-AAAAAAAAAAAAAAAAAAA_0000000
 payment_google_cred      = credentials.json
 payment_google_pickle    = token.pickle
-payment_email_col        = 0
-payment_username_col     = 1
-payment_expiration_col   = 2
+payment_email_col        = A
+payment_username_col     = B
+payment_expiration_col   = C
 payment_date_format      = %%d/%%m/%%Y
 
 # Example configuration for using an Excel file
