--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -27,7 +27,7 @@ payment_check_on_join    = False
 payment_type             = GOOGLE_SHEET
 payment_google_sheet_id  = 0000000000000000-AAAAAAAAAAAAAAAAAAA_0000000
 payment_google_cred      = credentials.json
-payment_google_pickle    = token.pickle
+payment_google_cred_path =
 payment_email_col        = A
 payment_username_col     = B
 payment_expiration_col   = C
