--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -28,8 +28,9 @@ payment_type             = GOOGLE_SHEET
 payment_google_sheet_id  = 0000000000000000-AAAAAAAAAAAAAAAAAAA_0000000
 payment_google_cred      = credentials.json
 payment_google_cred_path =
+payment_use_user_id      = False
 payment_email_col        = A
-payment_username_col     = B
+payment_user_col         = B
 payment_expiration_col   = C
 payment_date_format      = %%d/%%m/%%Y
 
