--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -24,6 +24,7 @@ support_telegram = MySupportUsername
 [payment]
 payment_website          = https://mywebsite.com
 payment_check_on_join    = False
+payment_check_dup_email  = True
 payment_type             = GOOGLE_SHEET
 payment_google_sheet_id  = 0000000000000000-AAAAAAAAAAAAAAAAAAA_0000000
 payment_google_cred      = credentials.json
