Update tools config

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,15 @@
 [tox]
-envlist = py37
+skip_missing_interpreters = true
+envlist = py{37,38,39,310}
 
-# flake8 configuration
 [flake8]
 ignore =
     N802    # function name should be lowercase
     W504    # line break after binary operator
 exclude =
-    app
+    .tox
+    build
     setup.py
-    telegram_payment_bot/_version.py
 max-line-length=130
 per-file-ignores =
     # Imported but unused
