--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -27,9 +27,11 @@ payment_check_on_join    = False
 payment_check_dup_email  = True
 payment_type             = GOOGLE_SHEET
 payment_google_sheet_id  = 0000000000000000-AAAAAAAAAAAAAAAAAAA_0000000
+payment_google_cred_type = OAUTH2
 payment_google_cred      = credentials.json
 payment_google_cred_path =
 payment_use_user_id      = False
+payment_worksheet_idx    = 0
 payment_email_col        = A
 payment_user_col         = B
 payment_expiration_col   = C
