--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,12 @@ ignore =
     N802    # function name should be lowercase
     W504    # line break after binary operator
 exclude =
+    .eggs
     .tox
     build
+    venv
     setup.py
+    telegram_payment_bot/_version.py
 max-line-length=130
 per-file-ignores =
     # Imported but unused
@@ -22,6 +25,8 @@ lines_after_imports = 2
 line_length = 120
 multi_line_output = 5
 skip =
+    .eggs
     .tox
     build
+    venv
     setup.py
