--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,11 @@ license = "MIT"
 license-files = [
     "LICENSE",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.7"
 keywords = ["telegram", "bot", "telegram bot", "payments", "payments check"]
 classifiers = [
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
