--- a/pyproject_legacy.toml
+++ b/pyproject_legacy.toml
@@ -52,6 +52,7 @@ telegram_payment_bot = ["lang/lang_en.xml"]
 [tool.setuptools.dynamic]
 version = {attr = "telegram_payment_bot._version.__version__"}
 dependencies = {file = ["requirements.txt"]}
+optional-dependencies.develop = {file = ["requirements-dev.txt"]}
 
 [tool.mypy]
 ignore_missing_imports = true
