--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ ignore_missing_imports = true
 exclude = [
     ".github",
     ".eggs",
+    "*.egg-info",
     ".tox",
     "build",
     "venv",
