--- a/tox.ini
+++ b/tox.ini
@@ -10,10 +10,10 @@ ignore =
     W503
 exclude =
     .eggs
+    .egg-info
     .tox
     build
     venv
-    setup.py
     telegram_payment_bot/_version.py
 max-line-length=130
 per-file-ignores =
@@ -28,7 +28,8 @@ line_length = 120
 multi_line_output = 5
 skip =
     .eggs
+    .egg-info
     .tox
     build
     venv
-    setup.py
+
