--- a/pyproject_legacy.toml
+++ b/pyproject_legacy.toml
@@ -5,6 +5,9 @@
 #
 #     pip install .
 #
+# NOTE: This file is only for installing the package from the folder.
+#       You DON'T need it if you install the package from PyPi (i.e. pip install telegram_payment_bot)
+#
 [build-system]
 requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
