--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -27,7 +27,7 @@ payment_check_on_join    = False
 payment_check_dup_email  = True
 payment_type             = GOOGLE_SHEET
 payment_google_sheet_id  = 0000000000000000-AAAAAAAAAAAAAAAAAAA_0000000
-payment_google_cred_type = OAUTH2
+payment_google_cred_type = SERVICE_ACCOUNT
 payment_google_cred      = credentials.json
 payment_google_cred_path =
 payment_use_user_id      = False
@@ -44,6 +44,7 @@ payment_date_format      = %%d/%%m/%%Y
 # Configuration for email
 [email]
 email_enabled   = True
+email_auth_type = NONE
 email_from      = My Website <info@mywebsite.com>
 email_reply_to  = info@mywebsite.com
 email_host      = myhost.com
