--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -28,8 +28,8 @@ payment_check_dup_email  = True
 payment_type             = GOOGLE_SHEET
 payment_google_sheet_id  = 0000000000000000-AAAAAAAAAAAAAAAAAAA_0000000
 payment_google_cred_type = SERVICE_ACCOUNT
-payment_google_cred      = credentials.json
-payment_google_cred_path =
+payment_google_cred      = cred/service_account.json
+payment_google_cred_path = cred/oauth2
 payment_use_user_id      = False
 payment_worksheet_idx    = 0
 payment_email_col        = A
