--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -39,7 +39,7 @@ payment_date_format      = %%d/%%m/%%Y
 
 # Example configuration for using an Excel file
 #payment_type       = EXCEL_FILE
-#payment_excel_file = data/Payments.xlsx
+#payment_excel_file = data/Payments.xls
 
 # Configuration for email
 [email]
