--- a/app/conf/config.ini
+++ b/app/conf/config.ini
@@ -44,10 +44,10 @@ payment_date_format      = %%d/%%m/%%Y
 # Configuration for email
 [email]
 email_enabled   = True
-email_auth_type = NONE
+email_auth_type = SSL_TLS
 email_from      = My Website <info@mywebsite.com>
 email_reply_to  = info@mywebsite.com
-email_host      = myhost.com
+email_host      = smtp.myhost.com
 email_user      = user@myhost.com
 email_password  = password
 email_subject   = Payment Expiring - GROUP_NAME
