--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,19 @@ services:
       - CONFIG_FILE=${CONFIG_FILE:-conf/config.ini}
       - TZ=Europe/Rome
     restart: unless-stopped
+    stop_grace_period: 10s
+
+    deploy:
+      resources:
+        limits:
+          memory: 512M
 
     volumes:
-      - ./app/conf:/code/app/conf:ro
-      - ./app/lang:/code/app/lang:ro
+      - ./app/conf:/code/conf:ro
+      - ./app/lang:/code/lang:ro
       - ./app/cred:/code/app/cred
-      - ./app/session:/code/app/session
-      - ./app/logs:/code/app/logs
+      - ./app/session:/code/session
+      - ./app/logs:/code/logs
 
     logging:
       driver: "json-file"
